; ModuleID = '/home/carl/AnghaBench/lede/package/network/config/swconfig/src/extr_swlib.c_swlib_free_all.c'
source_filename = "/home/carl/AnghaBench/lede/package/network/config/swconfig/src/extr_swlib.c_swlib_free_all.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.switch_dev = type { %struct.switch_dev* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @swlib_free_all(%struct.switch_dev* %0) #0 {
  %2 = alloca %struct.switch_dev*, align 8
  %3 = alloca %struct.switch_dev*, align 8
  store %struct.switch_dev* %0, %struct.switch_dev** %2, align 8
  br label %4

4:                                                ; preds = %7, %1
  %5 = load %struct.switch_dev*, %struct.switch_dev** %2, align 8
  %6 = icmp ne %struct.switch_dev* %5, null
  br i1 %6, label %7, label %14

7:                                                ; preds = %4
  %8 = load %struct.switch_dev*, %struct.switch_dev** %2, align 8
  %9 = getelementptr inbounds %struct.switch_dev, %struct.switch_dev* %8, i32 0, i32 0
  %10 = load %struct.switch_dev*, %struct.switch_dev** %9, align 8
  store %struct.switch_dev* %10, %struct.switch_dev** %3, align 8
  %11 = load %struct.switch_dev*, %struct.switch_dev** %2, align 8
  %12 = call i32 @swlib_free(%struct.switch_dev* %11)
  %13 = load %struct.switch_dev*, %struct.switch_dev** %3, align 8
  store %struct.switch_dev* %13, %struct.switch_dev** %2, align 8
  br label %4

14:                                               ; preds = %4
  ret void
}

declare dso_local i32 @swlib_free(%struct.switch_dev*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
